feat: Add support for transforming `problem_statement` using transformation memory.